#416: Code clean-up in GetItem UC